--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2dae5">  <td>18/12/03 17:39:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ValidLogin@33c7e1bb]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@1320677379</td>   <td></td> </tr>
-<tr bgcolor="ba7b69">  <td>18/12/03 17:40:01</td>   <td>9025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@33c7e1bb]">testValidLogin</td> 
-  <td>main@1320677379</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>18/12/03 17:40:11</td>   <td>18910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.ValidLogin@33c7e1bb]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1320677379</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>18/12/03 17:40:13</td>   <td>21470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.InValidLogin@30a3107a]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@1320677379</td>   <td></td> </tr>
-<tr bgcolor="81ad78">  <td>18/12/03 17:40:21</td>   <td>29335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InValidLogin.testInValidLogin()[pri:2, instance:script.InValidLogin@30a3107a]">testInValidLogin</td> 
-  <td>main@1320677379</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>18/12/03 17:40:24</td>   <td>32055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.InValidLogin@30a3107a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1320677379</td>   <td></td> </tr>
-<tr bgcolor="d2dae5">  <td>18/12/03 17:40:26</td>   <td>34502</td> <td title="&lt;&lt;BaseTest.print()[pri:0, instance:script.InValidLogin@30a3107a]">&lt;&lt;print</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1320677379</td>   <td></td> </tr>
+<tr bgcolor="aac163">  <td>18/12/05 16:48:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ValidLogin@38bc8ab5]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>18/12/05 16:48:35</td>   <td>20997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@38bc8ab5]">testValidLogin</td> 
+  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="ae75a8">  <td>18/12/05 16:48:35</td>   <td>21029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InValidLogin.testInValidLogin()[pri:2, instance:script.InValidLogin@6b9651f3]">testInValidLogin</td> 
+  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="addda9">  <td>18/12/05 16:48:35</td>   <td>21029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductEdition.testCheckProductEdition()[pri:3, instance:script.CheckProductEdition@5bb21b69]">testCheckProductEdition</td> 
+  <td>main@681384962</td>   <td></td> </tr>
 </table>
