--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,4 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>testname : testValidLogin</td></tr>
-<tr><td>PohtoPath :./photo/testValidLogin.png</td></tr>
-<tr><td>testname : testInValidLogin</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
