--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,7 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>testname : testValidLogin</td></tr>
+<tr><td>PohtoPath :./photo/testValidLogin.png</td></tr>
+<tr><td>testname : testInValidLogin</td></tr>
+<tr><td>Actual ProductEdition : actiTIME 2017.4</td></tr>
+<tr><td>expected ProductEdition : actiTIME 2017.4</td></tr>
+<tr><td>testname : testCheckProductEdition</td></tr>
+</table>
