--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,4 @@
-<h2>Reporter output</h2><table><tr><td>testname : testInValidLogin</td></tr>
+<h2>Reporter output</h2><table><tr><td>Actual ProductEdition : actiTIME 2017.4</td></tr>
+<tr><td>expected ProductEdition : actiTIME 2017.4</td></tr>
+<tr><td>testname : testCheckProductEdition</td></tr>
 </table>
