--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aac163">  <td>18/12/05 16:48:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ValidLogin@38bc8ab5]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@681384962</td>   <td></td> </tr>
-<tr bgcolor="9aa799">  <td>18/12/05 16:48:35</td>   <td>20997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@38bc8ab5]">testValidLogin</td> 
-  <td>main@681384962</td>   <td></td> </tr>
-<tr bgcolor="ae75a8">  <td>18/12/05 16:48:35</td>   <td>21029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InValidLogin.testInValidLogin()[pri:2, instance:script.InValidLogin@6b9651f3]">testInValidLogin</td> 
-  <td>main@681384962</td>   <td></td> </tr>
-<tr bgcolor="addda9">  <td>18/12/05 16:48:35</td>   <td>21029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductEdition.testCheckProductEdition()[pri:3, instance:script.CheckProductEdition@5bb21b69]">testCheckProductEdition</td> 
-  <td>main@681384962</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>18/12/05 16:51:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ValidLogin@6b9651f3]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="ae75a8">  <td>18/12/05 16:51:37</td>   <td>19149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@6b9651f3]">testValidLogin</td> 
+  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>18/12/05 16:51:55</td>   <td>36426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.ValidLogin@6b9651f3]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>18/12/05 16:51:58</td>   <td>39447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.InValidLogin@5bb21b69]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="b5ab66">  <td>18/12/05 16:52:11</td>   <td>52729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InValidLogin.testInValidLogin()[pri:2, instance:script.InValidLogin@5bb21b69]">testInValidLogin</td> 
+  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>18/12/05 16:52:21</td>   <td>62972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.InValidLogin@5bb21b69]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>18/12/05 16:52:23</td>   <td>65112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.CheckProductEdition@6b57696f]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="addda9">  <td>18/12/05 16:52:38</td>   <td>79630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductEdition.testCheckProductEdition()[pri:3, instance:script.CheckProductEdition@6b57696f]">testCheckProductEdition</td> 
+  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>18/12/05 16:52:47</td>   <td>89204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.CheckProductEdition@6b57696f]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>18/12/05 16:52:50</td>   <td>91667</td> <td title="&lt;&lt;BaseTest.print()[pri:0, instance:script.CheckProductEdition@6b57696f]">&lt;&lt;print</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
 </table>
