--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,5 +1,8 @@
-<h2>Reporter output</h2><table><tr><td>testname : testValidLogin</td></tr>
-<tr><td>PohtoPath :./photo/testValidLogin.png</td></tr>
+<h2>Reporter output</h2><table><tr><td>radiobutton is displayes true</td></tr>
+<tr><td>testname : testChangeColor</td></tr>
+<tr><td>testname : checkLondonOptionsSelected</td></tr>
+<tr><td>PohtoPath :./photo/checkLondonOptionsSelected.png</td></tr>
+<tr><td>testname : testValidLogin</td></tr>
 <tr><td>testname : testInValidLogin</td></tr>
 <tr><td>Actual ProductEdition : actiTIME 2017.4</td></tr>
 <tr><td>expected ProductEdition : actiTIME 2017.4</td></tr>
