--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95d2a2">  <td>18/12/05 17:10:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.CheckProductEdition@e874448]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@963522361</td>   <td></td> </tr>
-<tr bgcolor="6eabae">  <td>18/12/05 17:10:57</td>   <td>18442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductEdition.testCheckProductEdition()[pri:3, instance:script.CheckProductEdition@e874448]">testCheckProductEdition</td> 
-  <td>main@963522361</td>   <td></td> </tr>
-<tr bgcolor="95d2a2">  <td>18/12/05 17:11:08</td>   <td>28618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.CheckProductEdition@e874448]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@963522361</td>   <td></td> </tr>
-<tr bgcolor="95d2a2">  <td>18/12/05 17:11:08</td>   <td>28798</td> <td title="&lt;&lt;BaseTest.print()[pri:0, instance:script.CheckProductEdition@e874448]">&lt;&lt;print</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@963522361</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>18/12/18 20:17:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.CheckLondonOptionsSelected@5f3a4b84]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1920387277</td>   <td></td> </tr>
+<tr bgcolor="89cf83">  <td>18/12/18 20:17:29</td>   <td>11396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckLondonOptionsSelected.checkLondonOptionsSelected()[pri:0, instance:script.CheckLondonOptionsSelected@5f3a4b84]">checkLondonOptionsSelected</td> 
+  <td>main@1920387277</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>18/12/18 20:17:45</td>   <td>27013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.CheckLondonOptionsSelected@5f3a4b84]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1920387277</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>18/12/18 20:17:48</td>   <td>29572</td> <td title="&lt;&lt;BaseTest.print()[pri:0, instance:script.CheckLondonOptionsSelected@5f3a4b84]">&lt;&lt;print</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1920387277</td>   <td></td> </tr>
 </table>
