--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af6be2">  <td>18/12/05 16:51:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.ValidLogin@6b9651f3]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>18/12/05 16:52:21</td>   <td>26546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.InValidLogin@5bb21b69]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>18/12/05 16:52:47</td>   <td>52778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.CheckProductEdition@6b57696f]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>18/12/05 16:51:18</td>   <td>-36426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ValidLogin@6b9651f3]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>18/12/05 16:51:58</td>   <td>3021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.InValidLogin@5bb21b69]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>18/12/05 16:52:23</td>   <td>28686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.CheckProductEdition@6b57696f]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>18/12/05 16:52:50</td>   <td>55241</td> <td title="&lt;&lt;BaseTest.print()[pri:0, instance:script.CheckProductEdition@6b57696f]">&lt;&lt;print</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="addda9">  <td>18/12/05 16:52:38</td>   <td>43204</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductEdition.testCheckProductEdition()[pri:3, instance:script.CheckProductEdition@6b57696f]">testCheckProductEdition</td> 
-  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="b5ab66">  <td>18/12/05 16:52:11</td>   <td>16303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InValidLogin.testInValidLogin()[pri:2, instance:script.InValidLogin@5bb21b69]">testInValidLogin</td> 
-  <td>main@712025048</td>   <td></td> </tr>
-<tr bgcolor="ae75a8">  <td>18/12/05 16:51:37</td>   <td>-17277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@6b9651f3]">testValidLogin</td> 
-  <td>main@712025048</td>   <td></td> </tr>
+<tr bgcolor="d47cee">  <td>18/12/18 20:19:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckLondonOptionsSelected.checkLondonOptionsSelected()[pri:0, instance:script.CheckLondonOptionsSelected@a38d7a3]">checkLondonOptionsSelected</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:19:17</td>   <td>-9617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.ChangeColor@1a3869f4]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:19:39</td>   <td>12271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.CheckLondonOptionsSelected@a38d7a3]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:19:55</td>   <td>27924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.ValidLogin@3aeaafa6]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:20:15</td>   <td>48365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.InValidLogin@63440df3]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:20:33</td>   <td>65909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp(org.testng.ITestResult)[pri:0, instance:script.CheckProductEdition@77f99a05]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:18:54</td>   <td>-32415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ChangeColor@1a3869f4]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:19:19</td>   <td>-7479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.CheckLondonOptionsSelected@a38d7a3]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:19:42</td>   <td>14962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ValidLogin@3aeaafa6]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:19:57</td>   <td>30093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.InValidLogin@63440df3]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:20:17</td>   <td>50495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.CheckProductEdition@77f99a05]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bfd8bd">  <td>18/12/18 20:20:35</td>   <td>68155</td> <td title="&lt;&lt;BaseTest.print()[pri:0, instance:script.ChangeColor@1a3869f4]">&lt;&lt;print</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="b79e6f">  <td>18/12/18 20:19:05</td>   <td>-22196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChangeColor.testChangeColor()[pri:0, instance:script.ChangeColor@1a3869f4]">testChangeColor</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="718b94">  <td>18/12/18 20:20:25</td>   <td>57898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductEdition.testCheckProductEdition()[pri:3, instance:script.CheckProductEdition@77f99a05]">testCheckProductEdition</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="93cca4">  <td>18/12/18 20:20:05</td>   <td>38347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InValidLogin.testInValidLogin()[pri:2, instance:script.InValidLogin@63440df3]">testInValidLogin</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="9f88ab">  <td>18/12/18 20:19:49</td>   <td>22575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@3aeaafa6]">testValidLogin</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
 </table>
